# gospel

./: .gitignore  .ocamlformat-ignore  CHANGES.md  Makefile  README.md
.github/workflows/: build.yml  documentation.yml  localdoc.yml
docs/: docusaurus.config.js
docs/docs/getting-started/: first-spec.md
docs/docs/language/: expressions.md  locations.md  type-specifications.md
docs/docs/walkthroughs/: mutable-queue.md  union-find.md
docs/src/pages/: faq.md
src/: dterm.ml  pps.mll  tterm_helper.ml  tterm_helper.mli  typing.ml
src/ppx_odoc_of_gospel/: ppx_odoc_of_gospel.ml
src/stdlib/: dune
test/: tmp.txt
test/coercions/: dune.inc
test/coercions/negative/: dune.inc
test/documentation/: test_preprocess_documentation.t
test/issues/: dune.inc  t5.mli
test/literals/: dune.inc
test/negative/: constants1.mli  dune.inc  dune_gen.options  partial_application.mli
test/patterns/: dune.inc  fun_opt_incomplete.mli
test/positive/: dune.inc
test/ppx/: dune
test/semantic/: dune.inc
test/syntax/: dune  dune.inc  guard.mli  invalid_modifies.mli  match_guard.mli  record_pattern1.mli  record_pattern2.mli  record_pattern3.mli
test/typechecker/: alpha_not_beta.mli  axiom_float_not_integer.mli  dune.inc  dune_gen.options  exception_arity.mli  function_float_not_integer.mli  int_not_bool.mli  integer_not_bool.mli  integer_not_bool3.mli  integer_not_int.mli  open.mli  raises_float_not_integer.mli  record_pattern4.mli  tuple_arity2.mli  type_arity4.mli  variant_integer.mli
test/utils/: md2mli.awk
test/vocal/: dune  dune.inc
test/warnings/: dune.inc
(+8 files in other folders)
