(include ../utils/dune.common)

(include dune.inc)

(rule
 (with-stdout-to
  iterated.mli
  (bash
   "for((i = 0; i < %{env:ITERATIONS=5}; i++)) ; do printf 'module Block%d = sig\n' $i; cat %{dep:Vector.mli}; printf 'end\n'; done")))

(rule
 (alias perfs)
 (deps iterated.mli %{bin:gospel})
 (action
  (bash
   "ls -al iterated.mli; grep Block iterated.mli | tail -n 1; time OCAMLRUNPARAM=v=0x400 %{bin:gospel} pps iterated.mli > /dev/null")))
